# bambana-seto

./: Cargo.toml  LICENSE  README.md  app.rc  build.rs  crono.db
locales/: en.yml  it.yml
src/: config.rs  lib.rs  main.rs  models.rs
src/capture/: idle_sentinel.rs  idlesentinel.rs  mod.rs  panoptes.rs
src/database/: db_manager.rs  mod.rs  thot.rs
src/locales/: en.yml  it.yml
src/sql/: panoptes_v0.1.0.sql
src/ui/: app.rs
