[package]
name = "bambana-seto"
description = "A tiny time tracker that doesn’t waste your time."
authors = ["Nicola Danese <nicola.danese@e-projectsrl.it>"]
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "**/*.rc", "locales/**", "assets/**", "Cargo.toml"]
version = "0.1.1"
edition = "2024"
build = "build.rs"
# https://github.com/emilk/eframe_template/blob/main/Cargo.toml

[build-dependencies]
embed-resource = "3.0.9"

[dependencies]
tokio = { version = "1.47", features = ["rt", "time", "macros", "rt-multi-thread", "signal"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
sysinfo = "0.37"
winapi = { version = "0.3", features = ["winuser"] }
chrono = "0.4"
egui = "0.33"
eframe = "0.33"
image = "0.25"
log = "0.4"
simplelog = "0.12"
notify-rust = "4"
rust-i18n = "4.1"
serde = { version = "1.0", features = ["derive"] }
confy = "2.0"
# tray-icon = "0.14"   # To support Windows tray icon

[dependencies.windows]
version = "0.61"
features = [    
#    "Win32_Foundation",
#    "Win32_Security",
#    "Win32_System_Threading",
#    "Win32_System_SystemInformation",
   "Win32_UI_WindowsAndMessaging",
#    "Win32_UI_Input_KeyboardAndMouse",
]
